force-app/main/default/objects/User/fields/msf_Campaign__c.field-meta.xml
<CustomField>
    <fullName>msf_Campaign__c</fullName>
    <label>Campaña</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alta F2F</fullName>
            </value>
            <value>
                <fullName>AF F2F INTERNO MADRID</fullName>
            </value>
            <value>
                <fullName>AF F2F INTERNO MÁLAGA</fullName>
            </value>
            <value>
                <fullName>AF F2F EXTERNO BARCELONA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>