force-app/main/default/objects/User/fields/msf_City__c.field-meta.xml
<CustomField>
    <fullName>msf_City__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Málaga</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
                <isActive>false</isActive>
                <label>Cordoba</label>
            </value>
            <value>
                <fullName>Las Palmas</fullName>
                <isActive>false</isActive>
                <label>Las Palmas</label>
            </value>
            <value>
                <fullName>Sevilla</fullName>
                <isActive>false</isActive>
                <label>Sevilla</label>
            </value>
            <value>
                <fullName>Valencia</fullName>
                <isActive>false</isActive>
                <label>Valencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>