force-app/main/default/objects/User/fields/msf_EconomicProcessUser__c.field-meta.xml
<CustomField>
    <fullName>msf_EconomicProcessUser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check only for economic.process@barcelona.msf.org</inlineHelpText>
    <label>Economic process user</label>
    <type>Checkbox</type>
</CustomField>