force-app/main/default/objects/User/fields/msf_FullName__c.field-meta.xml
<CustomField>
    <fullName>msf_FullName__c</fullName>
    <description>Nombre y Apellido1 del User, utilizado para matchear con el campo &apos;Captado por&apos; de los objetos Recurring Donations, Opportunities y Modificaciones de Cuota, que almacena Text y no una referencia a User. Finalidad Reports F2F</description>
    <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>