force-app/main/default/objects/User/fields/msf_Place__c.field-meta.xml
<CustomField>
    <fullName>msf_Place__c</fullName>
    <label>Localización</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Localización 1</fullName>
            </value>
            <value>
                <fullName>Localización 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>